# otel-instrumentation

./: README.md  pyproject.toml
otel_instrumentation/openai/: __init__.py  package.py  utils.py  version.py
